--- a/VSUQSM/src/app/features/admin-layout/a-user-management/create-account-modal/create-account-modal.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-user-management/create-account-modal/create-account-modal.component.html
@@ -60,8 +60,8 @@
           name="status"
           class="mt-1 block w-full p-2 border rounded-md"
         >
-          <option value="Enabled">Enable</option>
-          <option value="Disabled">Disable</option>
+          <option value="Online">Online</option>
+          <option value="Offline">Offline</option>
         </select>
       </div>
       <div *ngIf="isKiosk()">
