Kiosk-code in progress..

--- a/VSUQSM/src/app/features/admin-layout/a-user-management/create-account-modal/create-account-modal.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-user-management/create-account-modal/create-account-modal.component.html
@@ -27,11 +27,11 @@
         />
       </div>
       <div>
-        <label for="location" class="block text-sm font-medium text-gray-700">Location:</label>
+        <label for="department" class="block text-sm font-medium text-gray-700">department:</label>
         <select
-          [(ngModel)]="location"
-          id="location"
-          name="location"
+          [(ngModel)]="department"
+          id="department"
+          name="department"
           class="mt-1 block w-full p-2 border rounded-md"
         >
           <option>Accounting Office</option>
