--- a/VSUQSM/src/app/features/admin-layout/a-user-management/a-user-management.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-user-management/a-user-management.component.html
@@ -92,7 +92,7 @@
                 scope="col"
                 class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
               >
-                Location
+                Department
               </th>
               <th
                 scope="col"
@@ -124,7 +124,7 @@
               </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.fullName }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.username }}</td>
-              <td class="px-6 py-4 whitespace-nowrap">{{ user.location }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ user.department }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ user.type }}</td>
               <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                 <span
